--- a/02_EventLengths.Rmd
+++ b/02_EventLengths.Rmd
@@ -11,11 +11,12 @@ knitr::opts_chunk$set(echo = TRUE)
 
 # Library
 
-```{r}
+```{r, warning=F, message=F}
 library(tidyr)
 library(dplyr)
 library(ggplot2)
 library(ggpubr)
+library(RColorBrewer)
 ```
 
 # Input Data
@@ -24,16 +25,36 @@ library(ggpubr)
 events <- read.csv(file = "./data/events.csv",  header=T, sep=",")
 events$Days <- factor(events$Days, levels=c("1 or less", "2", "3", "4", "5",
                                             "6 to 9", "10 to 14", "15 to 19", "20+"))
+
+names(events)[9] <- "Yam"
+
 events2 <- events %>%
   gather("Pothole", "Count", 2:12)
+
 ```
 
 
 # Figure
 
 ```{r, fig.width=7.1, fig.height=3.54}
-ggplot(events2, aes(x = Days, y=Count, fill=Pothole))+
-  geom_bar(stat="identity", position="dodge")+
-  theme_bw(base_size = 9)
+mycolors <- colorRampPalette(brewer.pal(8, "Dark2"))(11)
+
+
+Fig2 <- ggplot(events2, aes(x = Days, y=Count, fill=Pothole))+
+  geom_bar(stat="identity", position="dodge", alpha=0.75)+
+  theme_bw(base_size = 9)+
+  scale_fill_manual(values=mycolors)+
+  labs(
+    x="Length of Event (days)",
+    y="Count of Monitored Events"
+  )
+
+Fig2
+```
+
+```{r}
+png("02_events.png", width = 190, height = 90, units = "mm",res = 300)
+Fig2
+dev.off()
 ```
 
