--- a/04_LoadDuration.Rmd
+++ b/04_LoadDuration.Rmd
@@ -56,6 +56,7 @@ b
 l <- ggplot(lettuce, aes())+
   geom_point(aes(x = PercentSeason, y=PercentArea), color="royalblue")+
   geom_point(aes(x=PercentSeason, y=DRP.mg.per.L/2), shape=18, size=2, color="darkorange")+
+  geom_smooth(method = "lm", aes(x=PercentSeason, y=DRP.mg.per.L/2), color="darkorange")+
   theme_bw(base_size = 9)+
   scale_y_continuous(sec.axis=sec_axis(~ .*2, name="DRP (mg per L)"))+
   labs(
@@ -83,6 +84,18 @@ m
 # Combined Figure
 
 ```{r, fig.width=3.54, fig.height=8.5}
-ggarrange(b, l, m, nrow=3)
+Fig4<- ggarrange(b, l, m, nrow=3,
+          labels = c("Bunny", "Lettuce","Mouth"),
+          font.label = list(size=9, face="plain"), 
+          hjust=c(-7, -6, -7.25), 
+          vjust=c(2))
+
+Fig4
+```
+
+```{r}
+png("04_LoadDuration.png", width = 90, height=215, units="mm", res=300)
+Fig4
+dev.off()
 ```
 
