--- a/03_Hydrographs.Rmd
+++ b/03_Hydrographs.Rmd
@@ -35,8 +35,8 @@ depths$Date <- dates
 levels <- depths[ , c(1:11)]
 precip <- depths[ , c(1, 12)]
 
-levels <- levels %>%
-  gather(key="Pothole", value="Depth", 2:11)
+# levels <- levels %>%
+  # gather(key="Pothole", value="Depth", 2:11)
 ```
 
 
@@ -44,31 +44,31 @@ levels <- levels %>%
 
 ```{r, fig.width=7.1, fig.height=4}
 
-mycolors <- colorRampPalette(brewer.pal(8, "Dark2"))(11)
+# mycolors <- colorRampPalette(brewer.pal(8, "Dark2"))(11)
 
-Fig3 <- ggplot()+
-  geom_point(data=levels, aes(Date, Depth, color=Pothole))+
-  geom_point(data = precip, aes(Date, (20-Precipitation.cm)/13.4), stat="identity", shape=6, alpha=1)+
-  theme_bw(base_size = 9)+
-  scale_y_continuous(name='Depth (m)', limits = c(0, 1.5),sec.axis=sec_axis(~ 20-.*13.4, name="Precipitation (cm)"))+
-  scale_x_date(date_breaks = "14 day"
-                   )+
+# Fig3 <- ggplot()+
+  # geom_point(data=levels, aes(Date, Depth, color=Pothole))+
+  # geom_point(data = precip, aes(Date, (20-Precipitation.cm)/13.4), stat="identity", shape=6, alpha=1)+
+  # theme_bw(base_size = 9)+
+  # scale_y_continuous(name='Depth (m)', limits = c(0, 1.5),sec.axis=sec_axis(~ 20-.*13.4, name="Precipitation (cm)"))+
+  # scale_x_date(date_breaks = "14 day"
+                   # )+
   # geom_bar(data=precip, aes(Precipitation.cm))+
   # scale_y_continuous(sec.axis = sec_axis(~.*5, name="Precipitation (cm)"))+
-  theme(axis.text.x = element_text(angle = 25, vjust = 0.5))+
-  scale_color_manual(values=mycolors)+
-  labs(
-    x = "Date",
-    y= "Water Depth (m)"
-  )
+  # theme(axis.text.x = element_text(angle = 25, vjust = 0.5))+
+  # scale_color_manual(values=mycolors)+
+  # labs(
+    # x = "Date",
+    # y= "Water Depth (m)"
+  # )
 
-Fig3
+# Fig3
 ```
 
 ```{r}
-png("03_Hydrographs.png", width=190, height = 100, units="mm", res=300)
-Fig3
-dev.off()
+# png("03_Hydrographs.png", width=190, height = 100, units="mm", res=300)
+# Fig3
+# dev.off()
 ```
 
 
